[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cctop"
version = "0.1.0"
description = "htop-style monitor for system load + Anthropic quotas across Claude Code profiles"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jean-Michel Rémi Boudreau" }]
keywords = ["htop", "monitor", "anthropic", "claude", "claude-code", "tui", "usage"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "textual>=8.0",
    "httpx>=0.27",
    "psutil>=5.9",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/remiBoudreau/cctop"
Repository = "https://github.com/remiBoudreau/cctop"
Issues = "https://github.com/remiBoudreau/cctop/issues"

[project.scripts]
cctop = "cctop:main"

[tool.setuptools]
py-modules = ["cctop"]
